changed all imgs path

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="fr">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="/assets/img/ej-title.png" />
+  <link rel="shortcut icon" href="easyJet/assets/img/ej-title.png" />
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>easyJet</title>
 </head>
-
 <body>
   <header>
     <div>
-      <img src="/assets/img/ej-title.png" alt="title " />
+      <img src="/easyJet/assets/img/ej-title.png" alt="title " />
       <a href="">Infos de vol </a>
       <a href="">Voiture et autres services</a>
       <a href="">Business</a>
@@ -24,15 +22,15 @@
       <a href=""><button>S'enregistrer</button></a>
       <a href="">Se connecter</a>
       <a href="">Aide</a>
-      <a href="">Fr-FR <img src="/assets/img/drapeau.png" alt=""></a>
+      <a href="">Fr-FR <img src="/easyJet/assets/img/drapeau.png" alt=""></a>
     </div>
   </header>
   <main>
     <section class="beach-section">
-      <img src="/assets/img/beach.jpg" alt=" beach " />
+      <img src="/easyJet/assets/img/beach.jpg" alt=" beach " />
     </section>
     <section class="container worldwide worldwide-default">
-      <img src="/assets/img/worldwide-img.jpg" alt="worldwide-img" />
+      <img src="/easyJet/assets/img/worldwide-img.jpg" alt="worldwide-img" />
       <div>
         <h2>WORLWIDE</h2>
         <p>Voyagez encore plus loin à l'étranger.</p>
@@ -44,7 +42,7 @@
       </div>
     </section>
     <section class="container worldwide2 worldwide-default">
-      <img src="/assets/img/bretagne.jpg" alt="" />
+      <img src="/easyJet/assets/img/bretagne.jpg" alt="" />
       <div>
         <h2>Cet été, faites sauter le crépier !</h2>
         <p>
@@ -62,9 +60,9 @@
       </div>
     </section>
     <section class="trip-imgs container">
-      <img src="/assets/img/triple-first.jpg" alt="orange logo">
-      <img src="/assets/img/triple-second.jpg" alt="woman in nap">
-      <img src="/assets/img//triple-third.jpg" alt=" View on the skye">
+      <img src="/easyJet/assets/img/triple-first.jpg" alt="orange logo">
+      <img src="/easyJet/assets/img/triple-second.jpg" alt="woman in nap">
+      <img src="/easyJet/assets/img//triple-third.jpg" alt=" View on the skye">
     </section>
   </main>
   <footer>
