--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="shortcut icon" href="easyJet/assets/img/ej-title.png" />
+  <link rel="shortcut icon" href="easyJet/assets/imgs/ej-title.png" />
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>easyJet</title>
 </head>
+
 <body>
   <header>
     <div>
-      <img src="/easyJet/assets/img/ej-title.png" alt="title " />
+      <img src="/easyJet/assets/imgs/ej-title.png" alt="title " />
       <a href="">Infos de vol </a>
       <a href="">Voiture et autres services</a>
       <a href="">Business</a>
@@ -22,15 +24,15 @@
       <a href=""><button>S'enregistrer</button></a>
       <a href="">Se connecter</a>
       <a href="">Aide</a>
-      <a href="">Fr-FR <img src="/easyJet/assets/img/drapeau.png" alt=""></a>
+      <a href="">Fr-FR <img src="/easyJet/assets/imgs/drapeau.png" alt=""></a>
     </div>
   </header>
   <main>
     <section class="beach-section">
-      <img src="/easyJet/assets/img/beach.jpg" alt=" beach " />
+      <img src="/easyJet/assets/imgs/beach.jpg" alt=" beach " />
     </section>
     <section class="container worldwide worldwide-default">
-      <img src="/easyJet/assets/img/worldwide-img.jpg" alt="worldwide-img" />
+      <img src="/easyJet/assets/imgs/worldwide-img.jpg" alt="worldwide-img" />
       <div>
         <h2>WORLWIDE</h2>
         <p>Voyagez encore plus loin à l'étranger.</p>
@@ -41,8 +43,54 @@
         <button>En savoir plus</button>
       </div>
     </section>
+
+    <section class="carrousel-section container">
+      <div class="carrousel-card">
+        <img src="/easyJet/assets/imgs/carousel1.jpg" alt="travellers pictures">
+        <div>
+          <p>Location de véhicule</p>
+          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
+          <button>En savoir plus</button>
+        </div>
+      </div>
+        <div class="carrousel-card">
+        <img src="/easyJet/assets/imgs/carousel2.jpg" alt="travellers pictures">
+        <div>
+          <p>Location de véhicule</p>
+          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
+          <button>En savoir plus</button>
+        </div>
+      </div>
+        <div class="carrousel-card">
+        <img src="/easyJet/assets/imgs/carousel3.jpg" alt="travellers pictures">
+        <div>
+          <p>Location de véhicule</p>
+          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
+          <button>En savoir plus</button>
+        </div>
+      </div>
+      <div class="carrousel-card">
+        <img src="/easyJet/assets/imgs/carousel4.jpg" alt="travellers pictures">
+        <div>
+          <p>Location de véhicule</p>
+          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
+          <button>En savoir plus</button>
+        </div>
+      </div>
+      <div class="carrousel-card">
+        <img src="/easyJet/assets/imgs/carousel5.jpg" alt="travellers pictures">
+        <div>
+          <p>Location de véhicule</p>
+          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
+          <button>En savoir plus</button>
+        </div>
+      </div>
+    </section>
+    </section>
+    </section>
+      
     <section class="container worldwide2 worldwide-default">
-      <img src="/easyJet/assets/img/bretagne.jpg" alt="" />
+      <img src="/easyJet/assets/imgs/bretagne.jpg" alt="" />
       <div>
         <h2>Cet été, faites sauter le crépier !</h2>
         <p>
@@ -60,9 +108,9 @@
       </div>
     </section>
     <section class="trip-imgs container">
-      <img src="/easyJet/assets/img/triple-first.jpg" alt="orange logo">
-      <img src="/easyJet/assets/img/triple-second.jpg" alt="woman in nap">
-      <img src="/easyJet/assets/img//triple-third.jpg" alt=" View on the skye">
+      <img src="/easyJet/assets/imgs/triple-first.jpg" alt="orange logo">
+      <img src="/easyJet/assets/imgs/triple-second.jpg" alt="woman in nap">
+      <img src="/easyJet/assets/imgs//triple-third.jpg" alt=" View on the skye">
     </section>
   </main>
   <footer>
