Changed cards descriptions & buttons name

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -56,33 +56,37 @@
         <div class="carrousel-card">
         <img src="/easyJet/assets/imgs/carousel2.jpg" alt="travellers pictures">
         <div>
-          <p>Location de véhicule</p>
-          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
-          <button>En savoir plus</button>
+          <p>Parking.Salon.Transfert</p>
+          <p>Ce sont les petits suppléments qui rendent les vacances vraiment spéciales, alors ajoutez la touche finale à votre voyage.
+
+</p>
+          <button>Reservez dès maintenant</button>
         </div>
       </div>
         <div class="carrousel-card">
         <img src="/easyJet/assets/imgs/carousel3.jpg" alt="travellers pictures">
         <div>
-          <p>Location de véhicule</p>
-          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
-          <button>En savoir plus</button>
+          <p>Vous prenez souvent l’avion ? Économisez du temps et de l’argent
+</p>
+          <p>Voyagez comme un pro avec un abonnement annuel easyJet Plus, à seulement 249 £.
+</p>
+          <button>Devenez membre dès maintenant</button>
         </div>
       </div>
       <div class="carrousel-card">
         <img src="/easyJet/assets/imgs/carousel4.jpg" alt="travellers pictures">
         <div>
-          <p>Location de véhicule</p>
-          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
-          <button>En savoir plus</button>
+          <p>Un transport de vacances simple et sûr</p>
+          <p>Besoin de navettes aéroport pour plus de tranquillité ? Choisissez parmi une gamme de navettes et de taxis de première qualité, sûrs et agréés.</p>
+          <button>Reservez dès maintenant</button>
         </div>
       </div>
       <div class="carrousel-card">
         <img src="/easyJet/assets/imgs/carousel5.jpg" alt="travellers pictures">
         <div>
-          <p>Location de véhicule</p>
-          <p>Vous avez besoin de réserver une voiture? Comparez les prix</p>
-          <button>En savoir plus</button>
+          <p>Visites et activités</p>
+          <p>Évitez les pièges à touristes et vivez des expériences authentiques et inoubliable</p>
+          <button>Consultez le site</button>
         </div>
       </div>
     </section>
