Add text to images in the triples container

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -53,23 +53,24 @@
           <button>En savoir plus</button>
         </div>
       </div>
-        <div class="carrousel-card">
+      <div class="carrousel-card">
         <img src="/easyJet/assets/imgs/carousel2.jpg" alt="travellers pictures">
         <div>
           <p>Parking.Salon.Transfert</p>
-          <p>Ce sont les petits suppléments qui rendent les vacances vraiment spéciales, alors ajoutez la touche finale à votre voyage.
+          <p>Ce sont les petits suppléments qui rendent les vacances vraiment spéciales, alors ajoutez la touche finale
+            à votre voyage.
 
-</p>
+          </p>
           <button>Reservez dès maintenant</button>
         </div>
       </div>
-        <div class="carrousel-card">
+      <div class="carrousel-card">
         <img src="/easyJet/assets/imgs/carousel3.jpg" alt="travellers pictures">
         <div>
           <p>Vous prenez souvent l’avion ? Économisez du temps et de l’argent
-</p>
+          </p>
           <p>Voyagez comme un pro avec un abonnement annuel easyJet Plus, à seulement 249 £.
-</p>
+          </p>
           <button>Devenez membre dès maintenant</button>
         </div>
       </div>
@@ -77,7 +78,8 @@
         <img src="/easyJet/assets/imgs/carousel4.jpg" alt="travellers pictures">
         <div>
           <p>Un transport de vacances simple et sûr</p>
-          <p>Besoin de navettes aéroport pour plus de tranquillité ? Choisissez parmi une gamme de navettes et de taxis de première qualité, sûrs et agréés.</p>
+          <p>Besoin de navettes aéroport pour plus de tranquillité ? Choisissez parmi une gamme de navettes et de taxis
+            de première qualité, sûrs et agréés.</p>
           <button>Reservez dès maintenant</button>
         </div>
       </div>
@@ -92,7 +94,7 @@
     </section>
     </section>
     </section>
-      
+
     <section class="container worldwide2 worldwide-default">
       <img src="/easyJet/assets/imgs/bretagne.jpg" alt="" />
       <div>
@@ -111,10 +113,30 @@
         <button>Reservez maintenant</button>
       </div>
     </section>
-    <section class="trip-imgs container">
-      <img src="/easyJet/assets/imgs/triple-first.jpg" alt="orange logo">
-      <img src="/easyJet/assets/imgs/triple-second.jpg" alt="woman in nap">
+    <section class="triple-imgs container">
+      <div>
+        <img src="/easyJet/assets/imgs/triple-first.jpg" alt="orange logo">
+        <div class="triple-imgs-absolute">
+          <h4>Développement durable</h4>
+          <p>En savoir plus > </p>
+        </div>
+      </div>
+      <div>
+        <img src="/easyJet/assets/imgs/triple-second.jpg" alt="woman in nap">
+        <div class="triple-imgs-absolute">
+        <h4>Apprivoiser votre peur de voler</h4>
+        <p>En savoir plus > </p>
+        </div>
+      </div>
+      </div>
+      <div>
       <img src="/easyJet/assets/imgs//triple-third.jpg" alt=" View on the skye">
+      <div class="triple-imgs-absolute">
+      <h4>Inscrivez-vous à notre newsletter</h4>
+      <p>Profitez-en </p>
+      </div>
+      </div>
+      
     </section>
   </main>
   <footer>
