Change all footer all li texts

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -144,41 +144,46 @@
       <div>
         <p>Infos de vol</p>
         <ul>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
+          <li>Flight Tracker</li>
+          <li>Gérer les réservations</li>
+          <li>Durabilité</li>
+          <li>Guides de voyage</li>
+          <li>Vaincre votre peur de voler</li>
         </ul>
       </div>
       <div>
         <p>Service clientèle</p>
         <ul>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
+          <li>Accessibilité</li>
+          <li>La Charte du passager</li>
+          <li>Etat du trafic</li>
+          <li>Plan du site</li>
+          <li>Aide spéciale</li>
         </ul>
       </div>
       <div>
+      <div></div>
         <p>À propos d'easyJet</p>
         <ul>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
+          <li>Carrières</li>
+          <li>Informations sur la compagnie</li>
+          <li>easyJet Spirit</li>
+          <li>Unicef</li>
         </ul>
       </div>
-      <div>
-        <p>À propos d'easyJet</p>
+      
         <ul>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
-          <li>Lorem I'm a footer</li>
+        <p>Termes et conditions</p>
+          <li>Politique d'utilisation acceptée</li>
+          <li>Articles dangereux</li>
+          <li>Charte de distribution</li>
+          <li>Suppléments et charges</li>
+          <li>Avis sur les cookies du groupe</li>
+          <li>Politique de confidentialité</li>
+          <li>Conditions Générales</li>
+          <li>Partagez votre avis</li>
+          <li>Informations Juridiques</li>
+
         </ul>
       </div>
 
