Add bottom carrousel with elements

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -124,19 +124,30 @@
       <div>
         <img src="/easyJet/assets/imgs/triple-second.jpg" alt="woman in nap">
         <div class="triple-imgs-absolute">
-        <h4>Apprivoiser votre peur de voler</h4>
-        <p>En savoir plus > </p>
+          <h4>Apprivoiser votre peur de voler</h4>
+          <p>En savoir plus > </p>
         </div>
       </div>
       </div>
       <div>
-      <img src="/easyJet/assets/imgs//triple-third.jpg" alt=" View on the skye">
-      <div class="triple-imgs-absolute">
-      <h4>Inscrivez-vous à notre newsletter</h4>
-      <p>Profitez-en </p>
+        <img src="/easyJet/assets/imgs//triple-third.jpg" alt=" View on the skye">
+        <div class="triple-imgs-absolute">
+          <h4>Inscrivez-vous à notre newsletter</h4>
+          <p>Profitez-en </p>
+        </div>
       </div>
-      </div>
+    </section>
+    <section class="bottom-carrousel container">
+      <h3>Comment pouvons nous vous aide ?</h3>
+        <menu>
+      <div>test</div>
+      <div>test</div>
+      <div>test</div>
+      <div>test</div>
+      <div>test</div>
+      <div>test</div>
       
+        </menu>
     </section>
   </main>
   <footer>
@@ -162,7 +173,7 @@
         </ul>
       </div>
       <div>
-      <div></div>
+        <div></div>
         <p>À propos d'easyJet</p>
         <ul>
           <li>Carrières</li>
@@ -171,21 +182,21 @@
           <li>Unicef</li>
         </ul>
       </div>
-      
-        <ul>
-        <p>Termes et conditions</p>
-          <li>Politique d'utilisation acceptée</li>
-          <li>Articles dangereux</li>
-          <li>Charte de distribution</li>
-          <li>Suppléments et charges</li>
-          <li>Avis sur les cookies du groupe</li>
-          <li>Politique de confidentialité</li>
-          <li>Conditions Générales</li>
-          <li>Partagez votre avis</li>
-          <li>Informations Juridiques</li>
 
-        </ul>
-      </div>
+      <ul>
+        <p>Termes et conditions</p>
+        <li>Politique d'utilisation acceptée</li>
+        <li>Articles dangereux</li>
+        <li>Charte de distribution</li>
+        <li>Suppléments et charges</li>
+        <li>Avis sur les cookies du groupe</li>
+        <li>Politique de confidentialité</li>
+        <li>Conditions Générales</li>
+        <li>Partagez votre avis</li>
+        <li>Informations Juridiques</li>
+
+      </ul>
+    </div>
 
     </div>
   </footer>
