--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -139,15 +139,27 @@
     </section>
     <section class="bottom-carrousel container">
       <h3>Comment pouvons nous vous aide ?</h3>
-        <menu>
-      <div>test</div>
-      <div>test</div>
-      <div>test</div>
-      <div>test</div>
-      <div>test</div>
-      <div>test</div>
-      
-        </menu>
+      <menu>
+        <div>
+          <p>Questions fréquentes</p>
+        </div>
+        <div>
+          <p>Bagages</p>
+        </div>
+        <div>
+          <p>Retards et annulations</p>
+        </div>
+        <div>
+          <p>S'enregistrer en ligne</p>
+        </div>
+        <div>
+          <p>Effectuer un changement</p>
+        </div>
+        <div>
+          <p>Protection contre les restrictions de voyage</p>
+        </div>
+
+      </menu>
     </section>
   </main>
   <footer>
