Add last carrousel

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -158,7 +158,13 @@
         <div>
           <p>Protection contre les restrictions de voyage</p>
         </div>
-
+<div> <p>Questions fréquentes</p></div>
+<div> <p>Questions fréquentes</p></div>
+<div> <p>Questions fréquentes</p></div>
+<div> <p>Questions fréquentes</p></div>
+<div> <p>Questions fréquentes</p></div>
+         
+        </div>
       </menu>
     </section>
   </main>
@@ -209,7 +215,6 @@
 
       </ul>
     </div>
-
     </div>
   </footer>
 </body>
