Add easyJet fonts

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -7,6 +7,8 @@
   <link rel="shortcut icon" href="easyJet/assets/imgs/ej-title.png" />
   <link rel="stylesheet" href="./assets/css/reset.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
+  <link rel="stylesheet" href="./assets/css/font.css">
+
   <title>easyJet</title>
 </head>
 
