Add last part of booking menu container

--- a/easyJet/index.html
+++ b/easyJet/index.html
@@ -91,19 +91,46 @@
               </div>
             </section>
             <div class="left-column">
-              <p>MANGERNAGER.DORMIR.MANGER</p>
-              <p>RECOMMENCER</p>
-              <p>Cet été détendez-vous à la plage : Baléares, sardaignes Sicile ... Vous avez le choix !</p>
+              <p class="left-column-title"> NAGER. DORMIR. MANGER. RECOMMENCER.</p>
+              <p class="left-column-desc">Cet été détendez-vous à la plage : Baléares, sardaignes Sicile ... Vous avez
+                le choix !</p>
               <div>
                 <p>à partir de:</p>
                 <p>29,75€</p>
               </div>
               <button>Réservez-maintenant</button>
-              </div>
-          
             </div>
-          
+          </div>
         </div>
+        <div class="beach-white-absolute">
+          <div class="container container-white-bar">
+            <div class="offers">
+              <div>
+                <p>Lisbonne</p>
+                <p>à partir de paris Charles de Gaulle 29,75€ Nov 2024 </p>
+                <button>Reservez</button>
+              </div>
+              <div>
+                <p>Porto</p>
+                <p>à partir de paris Charles de Gaulle 29,75€ Nov 2024 </p>
+                <button>Reservez</button>
+              </div>
+              <div>
+                <p>Faro</p>
+                <p>à partir de paris Charles de Gaulle 29,75€ Nov 2024 </p>
+                <button>Reservez</button>
+              </div>
+              <div>
+                <p>Lisbonne</p>
+                <p>à partir de paris Charles de Gaulle 29,75€ Nov 2024 </p>
+                <button>Reservez</button>
+              </div>
+              </div>
+               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
     </div>
     </div>
@@ -112,7 +139,6 @@
     </div>
     </div>
     </div>
-
     </section>
     <section class="container worldwide worldwide-default">
       <img src="/easyJet/assets/imgs/worldwide-img.jpg" alt="worldwide-img" />
